# techint

./: .env  Dockerfile  README.md  pipeline.sh  pyproject.toml
app/: main.py
app/api/: main.py
app/api/routes/: notes.py
app/core/: config.py
app/db/: gibbrish_data.py  inmemoryDB.py
app/logs/: logging.py  logging_middleware.py
app/model/: notes.py
test/: test_inDB.py
